# segment-chess-board

./: Cargo.toml  README.md
examples/: by_defined_image.rs  by_image_path.rs  layer_by_defined_image.rs
src/: bounding_box.rs  cluster.rs  color.rs  debug.rs  delaunay_triangulation.rs  lattice.rs  layer.rs  lib.rs  line.rs  main.rs  point.rs  sample_consensus.rs
