[package]
name = "segment_chess_board"
version = "0.1.0"
authors = ["Chase Starr <chasestarr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chfft = "0.3.4"
image = "0.23.12"
imageproc = "0.22.0"
wasm-bindgen = "0.2.69"

[lib]
crate-type = ["cdylib", "rlib"]

